<resources>
    <string name="app_name">Application</string>
    <string name="app_browser_name">通用浏览器</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_face">面像</string>
    <string name="menu_url">地址</string>
    <string name="menu_tongue">舌像</string>

    <string name="menu_notifications">通知</string>
    <string name="menu_issues">问题</string>
    <string name="menu_starred">收藏</string>
    <string name="menu_search">搜索</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about">关于</string>

    <string name="about_copyright">© %1$s xuexiangjys All rights reserved.</string>
    <string name="about_item_homepage">访问官网</string>
    <string name="about_item_author_github">联系作者</string>
    <string name="about_item_donation_link">捐赠作者</string>
    <string name="about_item_add_qq_group">QQ交流群</string>
    <string name="url_project_github">https://github.com/xuexiangjys/TemplateAppProject</string>
    <string name="url_author_github">https://gitee.com/xuexiangjys/xuexiangjys</string>
    <string name="url_donation_link">https://gitee.com/xuexiangjys/Resource/blob/master/doc/sponsor.md</string>
    <string name="url_add_qq_group">http://qm.qq.com/cgi-bin/qm/qr?k=tiP-E6rDf0y77PRNfp2lNVcc9RsglPCM</string>

    <string name="lab_yes">是</string>
    <string name="lab_no">否</string>
    <string name="lab_open_third_app">是否允许页面打开第三方应用?</string>

    <!-- 隐私政策弹窗   -->
    <string name="lab_exit_app">退出应用</string>
    <string name="lab_agree">同意</string>
    <string name="lab_disagree">不同意</string>
    <string name="lab_look_again">再次查看</string>
    <string name="lab_still_disagree">仍不同意</string>
    <string name="title_reminder">温馨提示</string>
    <string name="content_think_about_it_again">要不要再想想</string>
    <string name="content_privacy_explain_again">我们非常重视对你个人信息的保护，承诺严格按照《%s隐私权政策》保护及处理你的信息。如果你不同意该政策，很遗憾我们将无法为你提供服务</string>
    <string name="lab_privacy_name">《%s隐私权政策》</string>

    <!-- 登录   -->
    <string name="title_login_register">登录</string>
    <string name="action_get_verify_code">获取验证码</string>
    <string name="title_login">登录</string>
    <string name="title_login_by_verify_code">验证码登录</string>
    <string name="title_register">注 册</string>
    <string name="title_name">用户名</string>
    <string name="lab_forget_password">忘记密码?</string>
    <string name="lab_login_by_verify_code">验证码登录</string>
    <string name="lab_login_by_password">密码登录</string>
    <string name="tip_please_input_phone_number">请输入手机号码</string>
    <string name="tip_please_input_name">请输入用户名</string>
    <string name="title_phone_number">手机号码</string>
    <string name="title_url">URL地址</string>
    <string name="title_confirm">确认</string>
    <string name="title_password">密码</string>
    <string name="title_old_password">旧密码</string>
    <string name="title_change_password">修改密码</string>
    <string name="hint_please_input_verify_code">请输入验证码</string>
    <string name="hint_please_input_password">请输入密码</string>
    <string name="hint_please_input_password_confirm">请再次输入密码</string>
    <string name="login_password_error">请输入密码</string>
    <string name="tip_please_input_url">请输入url地址</string>
    <string name="lab_verify_code">验证码</string>
    <string name="tip_password_error">密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_new_password_error">新密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_phone_number_error">无效的手机号！</string>
    <string name="tip_input_url">请输入url</string>
    <string name="regex_phone_number">^((13[0-9])|(14[5,7])|(15[0-3,5-9])|(16[6])|(17[0,1,3,5-8])|(18[0-9])|(19[8,9]))\\d{8}$</string>
    <string name="tip_verify_code_error">请输入4位数验证码</string>
    <string name="regex_verify_code">^\\d{4}$</string>
    <string name="regex_password">^(?:(?=.*[a-zA-Z])(?=.*[0-9])).{8,18}$</string>
    <string name="title_forget_password">重置密码</string>
    <string name="lab_register_account">点击注册即表示同意</string>
    <string name="lab_service_protocol"><![CDATA[<用户协议>]]></string>
    <string name="lab_logout_confirm">是否确认退出账号？</string>
    <string name="title_user_protocol">用户协议</string>
    <string name="title_privacy_protocol">隐私政策</string>
    <string name="agree_protocol">我已阅读并同意</string>
    <string name="lab_and">和</string>

    <string name="title_jump_login">跳过</string>
    <string name="label_previous">上一条</string>
    <string name="label_next">下一条</string>
    <string name="tip_ignore_message">以后不再提示此类信息</string>
    <string name="tip_title">你知道吗？</string>
    <string name="title_activity_preview">PreviewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <item name="cacheBitmapKey" type="id" />
    <item name="cacheBitmapDirtyKey" type="id" />
    <string name="title_activity_face_result2">FaceResultActivity2</string>

    <!--face tab-->
    <string name="title_color">颜色</string>
    <string name="title_vein">纹理</string>
    <string name="title_result">结果</string>

    <!--face color-->
    <string name="face_color_black">黑色：</string>
    <string name="face_color_yellow">黄色：</string>
    <string name="face_color_light_yellow">淡黄色：</string>
    <string name="face_color_grey">灰色：</string>
    <string name="face_color_deep_red">暗红色：</string>
    <string name="face_color_red">红色：</string>
    <string name="face_color_percent">100%</string>
    <string name="face_color_middle_top">中间上：</string>
    <string name="face_color_middle_middle">中间中：</string>
    <string name="face_color_middle_bottom">中间下：</string>
    <string name="face_color_left">左边：</string>
    <string name="face_color_right">右边：</string>

    <!--face result-->
    <string name="face_result_title">健康指数报告</string>
    <string name="face_result_describe_title">健康状况及健康指数</string>
    <string name="face_result_health">健康：</string>
    <string name="face_result_health_value">0.75~1</string>
    <string name="face_result_subhealth">亚健康：</string>
    <string name="face_result_subhealth_value">0.50~0.75</string>
    <string name="face_result_describe_disease">疾病：</string>
    <string name="face_result_describe_disease_value">0~0.50</string>
    <string name="face_result_summary">数值越大越健康</string>
    <string name="face_result_health_index_describe">您的指数：</string>


    <!--tongue tab-->
    <string name="title_geometry">几何</string>
    <string name="title_tangible_material">有形物质</string>


    <!--dialog-->
    <string name="waiting_dialog_title">提示</string>
    <string name="waiting_dialog_content">数据接收中，请稍候</string>
    <string name="waiting_dialog_negativeText">取消</string>
    <string name="confirm_dialog_title">将向以下地址发送网络请求</string>

    <!--蓝牙-->
    <string name="connect">连接</string>
    <string name="connected">已连接</string>
    <string name="disconnect">断开连接</string>
    <string name="enter">进入操作</string>
    <string name="stop_scan">停止扫描</string>
    <string name="scanning">扫描中</string>
    <string name="start_scan">开始扫描</string>
    <string name="scan_setting">在下面你可以配置需要扫描的设备的条件，可以为空</string>
    <string name="setting_name">输入蓝牙设备广播名，多个之间以英文逗号隔开</string>
    <string name="setting_mac">输入蓝牙设备mac地址</string>
    <string name="setting_uuid">输入蓝牙设备UUID，多个之间以英文逗号隔开</string>
    <string name="expand_search_settings">展开搜索设置</string>
    <string name="retrieve_search_settings">收起搜索设置</string>
    <string name="title_activity_face_result">FaceResultActivity</string>


    <string name="adviser_chunyu">任何健康问题，3分钟内医生秒答</string>
    <string name="adviser_160">预约挂号、体检、名医咨询</string>
    <string name="tongue_cut_tips">框选出舌头部分进行分析</string>
    <string name="btn_back">返回</string>
    <string name="btn_confirm">确认</string>


</resources>
