<?xml version="1.0" encoding="utf-8"?>

<!--侧边栏-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/main_tab"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_change_url"
            android:icon="@drawable/ic_menu_trending"
            android:title="@string/menu_url" />

        <item
            android:id="@+id/nav_face"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/menu_face" />

        <item
            android:id="@+id/nav_tongue"
            android:icon="@drawable/ic_menu_person"
            android:title="@string/menu_tongue" />

        <item
            android:id="@+id/nav_lung_volume"
            android:icon="@drawable/ic_menu_person"
            android:title="肺音" />


    </group>

    <group
        android:id="@+id/other"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_search"
            android:checkable="false"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/menu_search" />

        <item
            android:id="@+id/nav_notifications"
            android:checkable="false"
            android:icon="@drawable/ic_menu_notifications"
            android:title="@string/menu_notifications" />

        <item
            android:id="@+id/nav_starred"
            android:checkable="false"
            android:icon="@drawable/ic_menu_star"
            android:title="@string/menu_starred" />
    </group>

    <group
        android:id="@+id/setting"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:checkable="false"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:checkable="false"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
    </group>


</menu>
