<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            style="@style/TextStyle.Title"
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:text="请输入采集设备地址"
            android:textSize="17sp" />

        <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
            android:id="@+id/et_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:hint="@string/tip_please_input_url"
            android:inputType="text"
            app:met_clearButton="true"
            app:met_errorMessage="@string/tip_phone_number_error"
            app:met_floatingLabel="normal"
            app:met_floatingLabelText="@string/title_url"
            app:met_regexp="@string/regex_phone_number" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="15dp"
            android:background="#E4E4E4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/no"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:singleLine="true"
                android:text="取消"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#E4E4E4" />

            <Button
                android:id="@+id/yes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:singleLine="true"
                android:text="确 定"
                android:textColor="@color/xui_btn_blue_normal_color"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout >