<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background">


<!--    <androidx.appcompat.widget.AppCompatImageView-->
<!--        android:layout_width="120dp"-->
<!--        android:layout_height="120dp"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        app:srcCompat="@mipmap/ic_launcher" />-->


<!--    <TextView-->
<!--        style="@style/TextStyle.Title"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_marginTop="100dp"-->
<!--        android:text="@string/title_register"-->
<!--        android:textSize="30sp" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        android:background="@drawable/login_frame">

<!--        <FrameLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="10dp">-->

<!--            <androidx.appcompat.widget.AppCompatImageView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="start|center_vertical"-->
<!--                android:tint="?attr/colorAccent"-->
<!--                app:srcCompat="@drawable/ic_phone" />-->

<!--            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText-->
<!--                android:id="@+id/et_name"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->

<!--                android:hint="@string/tip_please_input_name"-->
<!--                android:inputType="text"-->
<!--                app:met_clearButton="true"-->
<!--                app:met_floatingLabel="normal"-->
<!--                app:met_floatingLabelText="@string/title_name"-->
<!--                app:met_allowEmpty="false"-->
<!--                app:met_errorEmpty="no empty"/>-->

<!--        </FrameLayout>-->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp">

<!--            <androidx.appcompat.widget.AppCompatImageView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="start|center_vertical"-->
<!--                android:tint="?attr/colorAccent"-->
<!--                app:srcCompat="@drawable/ic_phone" />-->

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="请输入用户名"
                android:inputType="text"
                app:met_clearButton="true"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="用户名" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="10dp">

<!--            <androidx.appcompat.widget.AppCompatImageView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="start|center_vertical"-->
<!--                android:tint="?attr/colorAccent"-->
<!--                app:srcCompat="@drawable/ic_password" />-->

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_please_input_password"
                android:inputType="textPassword"
                app:met_clearButton="false"
                app:met_errorMessage="@string/login_password_error"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/title_password"
                app:met_passWordButton="true" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="10dp">

<!--            <androidx.appcompat.widget.AppCompatImageView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="start|center_vertical"-->
<!--                android:tint="?attr/colorAccent"-->
<!--                app:srcCompat="@drawable/ic_password" />-->

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/et_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_please_input_password_confirm"
                android:inputType="textPassword"
                app:met_clearButton="false"
                app:met_errorMessage="@string/login_password_error"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="确认密码"
                app:met_passWordButton="true" />

        </FrameLayout>

        <com.xuexiang.xui.widget.textview.supertextview.SuperButton
            android:id="@+id/btn_register"
            style="@style/SuperButton.Primary.Login"
            android:layout_marginTop="16dp"
            app:sSelectorNormalColor="@color/brown"
            app:sSelectorPressedColor="@color/brown"
            android:text="@string/title_register" />

    </LinearLayout>




</LinearLayout>